<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>it.polimi.ds</groupId>
  <artifactId>Fault-Tolerant_Data_Flow_new</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Fault-Tolerant_Data_Flow_new</name>
  <url>https://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>RELEASE</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>5.5.2</version>
    </dependency>

    <dependency>
      <groupId>org.javatuples</groupId>
      <artifactId>javatuples</artifactId>
      <version>1.2</version>
    </dependency>

    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>3.21.12</version>
    </dependency>

    <dependency>
        <groupId>io.github.cdimascio</groupId>
        <artifactId>dotenv-java</artifactId>
        <version>3.0.0</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.1</version>
          <executions>

            <execution>
              <id>proto</id>
              <goals>
                <goal>exec</goal>
              </goals>
              <configuration>
                <executable>generateProto</executable>
              </configuration>
            </execution>

            <execution>
              <id>alloc</id>
              <goals>
                <goal>java</goal>
              </goals>
              <configuration>
                <mainClass>it.polimi.ds.Allocator</mainClass>
          <systemProperties>
            <!-- Enable assertions -->
            <property>
              <key>java.vm.options</key>
              <value>-ea</value>
            </property>
          </systemProperties>
              </configuration>
            </execution>

            <execution>
              <id>client</id>
              <goals>
                <goal>java</goal>
              </goals>
              <configuration>
                <mainClass>it.polimi.ds.Client</mainClass>
          <systemProperties>
            <!-- Enable assertions -->
            <property>
              <key>java.vm.options</key>
              <value>-ea</value>
            </property>
          </systemProperties>
              </configuration>
            </execution>

            <execution>
              <id>workers</id>
              <goals>
                <goal>java</goal>
              </goals>
              <configuration>
                <mainClass>it.polimi.ds.WorkerManager</mainClass>
          <systemProperties>
            <!-- Enable assertions -->
            <property>
              <key>java.vm.options</key>
              <value>-ea</value>
            </property>
          </systemProperties>
              </configuration>
            </execution>

            <execution>
              <id>coord</id>
              <goals>
                <goal>java</goal>
              </goals>
              <configuration>
                <mainClass>it.polimi.ds.Coordinator</mainClass>
          <systemProperties>
            <!-- Enable assertions -->
            <property>
              <key>java.vm.options</key>
              <value>-ea</value>
            </property>
          </systemProperties>
              </configuration>
            </execution>

          </executions>
        </plugin>
      </plugins>
      </pluginManagement>
    <plugins>
<plugin>
      <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
      <version>0.8.7</version>
      <executions>
        <execution>
          <id>prepare-agent</id>
          <goals>
            <goal>prepare-agent</goal>
          </goals>
        </execution>
        <execution>
          <id>report</id>
          <goals>
            <goal>report</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.6.0</version>
          <executions>

              <execution>
              <id>coord</id>
              <phase>package</phase>

                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <finalName>coordinator</finalName>
                  <archive>
                    <manifest>
                      <mainClass>
                        it.polimi.ds.Coordinator
                      </mainClass>
                    </manifest>
                  </archive>
                  <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                  </descriptorRefs>
                  <appendAssemblyId>false</appendAssemblyId>
                </configuration>

              </execution>

              <execution>
              <id>workers</id>
              <phase>package</phase>

                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <finalName>workers</finalName>
                  <archive>
                    <manifest>
                      <mainClass>
                        it.polimi.ds.WorkerManager
                      </mainClass>
                    </manifest>
                  </archive>
                  <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                  </descriptorRefs>
                  <appendAssemblyId>false</appendAssemblyId>
                </configuration>

              </execution>


            </executions>
          </plugin>
    </plugins>
  </build>
</project>
